--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>VeilX - Best PC Keyless Executor</title>
-  <link rel="stylesheet" href="/public/style.css">
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-  <h1 class="title">VeilX</h1>
-  <h2 class="subtitle">Best PC Keyless Executor</h2>
-  <a href="https://example.com/veilx.exe" class="download-btn">Download on PC</a>
+  <div id="particles-js"></div>
 
-  <div class="social-buttons">
-    <a href="https://discord.gg/MRJvJxFJJ3" target="_blank" class="social-btn discord">Join Discord</a>
-    <a href="https://www.youtube.com/@IncognitoScripts" target="_blank" class="social-btn youtube">YouTube Channel</a>
+  <div class="container">
+    <h1>VeilX - Best PC Keyless Executor</h1>
+
+    <a class="download-btn" href="https://your-download-link.com" target="_blank">Download on PC</a>
+
+    <div class="social-buttons">
+      <a href="https://discord.gg/MRJvJxFJJ3" target="_blank" class="social-btn discord">Join Discord</a>
+      <a href="https://www.youtube.com/@IncognitoScripts" target="_blank" class="social-btn youtube">YouTube Channel</a>
+    </div>
+
+    <button id="toggle">Toggle Light/Dark</button>
   </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
