--- a/public/index.html
+++ b/public/index.html
@@ -7,22 +7,24 @@
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-  <div id="particles-js"></div>
-
+  <div id="theme-toggle">☀️/🌙</div>
   <div class="container">
-    <h1>VeilX - Best PC Keyless Executor</h1>
-
+    <h1 class="title">VeilX</h1>
+    <h2 class="subtitle">Best PC Keyless Executor</h2>
     <a class="download-btn" href="https://your-download-link.com" target="_blank">Download on PC</a>
 
     <div class="social-buttons">
       <a href="https://discord.gg/MRJvJxFJJ3" target="_blank" class="social-btn discord">Join Discord</a>
       <a href="https://www.youtube.com/@IncognitoScripts" target="_blank" class="social-btn youtube">YouTube Channel</a>
     </div>
-
-    <button id="toggle">Toggle Light/Dark</button>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+  <footer class="credits">
+    <p>Script Owner: Incognito Scripts</p>
+    <p>Scripter & UI Designer: bot_light</p>
+  </footer>
+
   <script src="script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 </body>
 </html>
