--- a/public/index.html
+++ b/public/index.html
@@ -3,28 +3,26 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>VeilX - Best PC Keyless Executor</title>
+  <title>VeilX | Best PC Keyless Executor</title>
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-  <div id="theme-toggle">☀️/🌙</div>
+  <div id="particles-js"></div>
+
   <div class="container">
-    <h1 class="title">VeilX</h1>
-    <h2 class="subtitle">Best PC Keyless Executor</h2>
+    <h1>VeilX | Best PC Keyless Executor</h1>
+
     <a class="download-btn" href="https://your-download-link.com" target="_blank">Download on PC</a>
 
     <div class="social-buttons">
       <a href="https://discord.gg/MRJvJxFJJ3" target="_blank" class="social-btn discord">Join Discord</a>
       <a href="https://www.youtube.com/@IncognitoScripts" target="_blank" class="social-btn youtube">YouTube Channel</a>
     </div>
+
+    <button id="toggle">Toggle Light/Dark</button>
   </div>
 
-  <footer class="credits">
-    <p>Script Owner: Incognito Scripts</p>
-    <p>Scripter & UI Designer: bot_light</p>
-  </footer>
-
-  <script src="script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
