--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,13 @@
 <body>
   <div id="particles-js"></div>
 
+  <div id="toggle-container">
+    <button id="toggle">☀️ / 🌙</button>
+  </div>
+
   <div class="container">
-    <h1>VeilX | Best PC Keyless Executor</h1>
+    <h1 class="main-title">VeilX</h1>
+    <h2 class="subtitle">Best PC Keyless Executor</h2>
 
     <a class="download-btn" href="https://your-download-link.com" target="_blank">Download on PC</a>
 
@@ -18,9 +23,12 @@
       <a href="https://discord.gg/MRJvJxFJJ3" target="_blank" class="social-btn discord">Join Discord</a>
       <a href="https://www.youtube.com/@IncognitoScripts" target="_blank" class="social-btn youtube">YouTube Channel</a>
     </div>
-
-    <button id="toggle">Toggle Light/Dark</button>
   </div>
+
+  <footer class="credits">
+    <p>Owner - Incognito Scripts</p>
+    <p>Scripter & UI Designer - Bot_light</p>
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
   <script src="script.js"></script>
