--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,12 @@
     <h1 class="main-title">VeilX</h1>
     <h2 class="subtitle">Best PC Keyless Executor</h2>
 
-    <a class="download-btn" href="https://your-download-link.com" target="_blank">Download on PC</a>
+    <div class="download-buttons">
+      <a class="download-btn" href="https://your-older-roblox-link.com" target="_blank">Download older Roblox (Required)</a>
+      <a class="download-btn" href="https://your-download-link.com" target="_blank">Download VeilX on PC</a>
+    </div>
+
+    <p class="unc-label">98% UNC</p>
 
     <div class="social-buttons">
       <a href="https://discord.gg/MRJvJxFJJ3" target="_blank" class="social-btn discord">Join Discord</a>
@@ -24,9 +29,9 @@
   </div>
 
   <div class="credits">
-    <h2 class="credits-title">CREDITS</h2>
-    <div class="credit-line">Owner — <span>Incognito Scripts</span></div>
-    <div class="credit-line">Scripter & UI Designer — <span>bot_light</span></div>
+    <h3>CREDITS</h3>
+    <p>Owner - Incognito Scripts</p>
+    <p>Scripter & UI Designer - Bot_light</p>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
