--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,10 @@
 
   <div class="container">
     <h1 class="main-title">VeilX</h1>
-    <h2 class="subtitle">Best PC Keyless Executor</h2>
+    <p class="subtitle">Best PC Keyless Executor</p>
 
     <div class="download-buttons">
-      <a class="download-btn" href="https://your-older-roblox-link.com" target="_blank">Download older Roblox (Required)</a>
+      <a class="download-btn" href="https://your-older-roblox-link.com" target="_blank">Download Older Roblox (Required)</a>
       <a class="download-btn" href="https://your-download-link.com" target="_blank">Download VeilX on PC</a>
     </div>
 
