--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <div id="particles-js"></div>
 
   <div class="container">
-    <h1 class="main-title">VeilX</h1>
+    <h1 class="main-title">VeilXX</h1>
     <p class="subtitle">Best PC Keyless Executor</p>
 
     <div class="download-buttons">
