--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
     <p class="subtitle">Best PC Keyless Executor</p>
 
     <div class="download-buttons">
-      <a class="download-btn" href="https://your-older-roblox-link.com" target="_blank">Download Older Roblox (Required)</a>
-      <a class="download-btn" href="https://your-download-link.com" target="_blank">Download VeilX on PC</a>
+      <a class="download-btn" href="https://testing.com" target="_blank">Download Older Roblox (Required)</a>
+      <a class="download-btn" href="https://nothing.com" target="_blank">Download VeilX on PC</a>
     </div>
 
     <p class="unc-label">98% UNC</p>
