--- a/public/index.html
+++ b/public/index.html
@@ -25,13 +25,13 @@
       <a href="https://www.youtube.com/@IncognitoScripts" target="_blank" class="social-btn youtube">YouTube Channel</a>
     </div>
 
-    <button id="toggle">Toggle Light/Dark</button>
+    <button id="toggle">Install Old Roblox first</button>
   </div>
 
   <div class="credits">
     <h3>CREDITS</h3>
     <p>Owner - Incognito Scripts</p>
-    <p>Scripter & UI Designer - Bot_light</p>
+    <p>Owner - Bot_light</p>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
