--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,12 @@
   <div id="particles-js"></div>
 
   <div class="container">
-    <h1 class="main-title">VeilX</h1>
+    <h1 class="main-title">VeilX V1.0.1</h1>
     <p class="subtitle">Best PC Keyless Executor</p>
 
     <div class="download-buttons">
       <a class="download-btn" href="https://mega.nz/file/aBgTFTRD#A6NS7rtps-q9vmVh7wQppocTqCLuPXqNLIFjrQp4ApY" target="_blank">Download Older Roblox (Required)</a>
-      <a class="download-btn" href="https://mega.nz/file/GU4xECjL#J0ei4djWDzu3cVUK_l6xlRRpli4e18ijtOPb45V7VVs" target="_blank">Download VeilX on PC</a>
+      <a class="download-btn" href="https://www.mediafire.com/file/82uuhbrgr8q9qf6/VeilX_V.1.0.1.zip/file?dkey=q8e7b9irvwp&r=552" target="_blank">Download VeilX on PC</a>
     </div>
 
     <p class="unc-label">100% UNC</p>
