--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
     <div class="download-buttons">
       <a class="download-btn" href="https://mega.nz/file/aBgTFTRD#A6NS7rtps-q9vmVh7wQppocTqCLuPXqNLIFjrQp4ApY" target="_blank">Download Older Roblox (Required)</a>
-      <a class="download-btn" href="https://www.mediafire.com/file/82uuhbrgr8q9qf6/VeilX_V.1.0.1.zip/file?dkey=q8e7b9irvwp&r=552" target="_blank">Download VeilX on PC</a>
+      <a class="download-btn" href="https://mega.nz/file/mUQkUa5b#iBqnAUPhI69sIRWZjAjG2zZHe2LA3P47Jb0_7V_w7Qw" target="_blank">Download VeilX on PC</a>
     </div>
 
     <p class="unc-label">98% UNC</p>
