--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,12 @@
   <div id="particles-js"></div>
 
   <div class="container">
-    <h1 class="main-title">VeilX V1.0.1</h1>
+    <h1 class="main-title">VeilX V1.0.0</h1>
     <p class="subtitle">Best PC Keyless Executor</p>
 
     <div class="download-buttons">
       <a class="download-btn" href="https://mega.nz/file/aBgTFTRD#A6NS7rtps-q9vmVh7wQppocTqCLuPXqNLIFjrQp4ApY" target="_blank">Download Older Roblox (Required)</a>
-      <a class="download-btn" href="https://mega.nz/file/mUQkUa5b#iBqnAUPhI69sIRWZjAjG2zZHe2LA3P47Jb0_7V_w7Qw" target="_blank">Download VeilX on PC</a>
+      <a class="download-btn" href="https://mega.nz/file/GU4xECjL#J0ei4djWDzu3cVUK_l6xlRRpli4e18ijtOPb45V7VVs" target="_blank">Download VeilX on PC</a>
     </div>
 
     <p class="unc-label">98% UNC</p>
