--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
     <p class="subtitle">Best PC Keyless Executor</p>
 
     <div class="download-buttons">
-      <a class="download-btn" href="https://mega.nz/file/aBgTFTRD#A6NS7rtps-q9vmVh7wQppocTqCLuPXqNLIFjrQp4ApY" target="_blank">Download Older Roblox (Required)</a>
-      <a class="download-btn" href="https://mega.nz/file/GU4xECjL#J0ei4djWDzu3cVUK_l6xlRRpli4e18ijtOPb45V7VVs" target="_blank">Download VeilX on PC</a>
+      <a class="download-btn" href="https://mega.nz/file/CUhwnTpR#Y5nGlnj_Njpe_DmpOdL45vQ2oyFNtO8JckAvpWrcWxE" target="_blank">Download Older Roblox (Required)</a>
+      <a class="download-btn" href="https://mega.nz/file/KVZSmQhZ#9xowzZsP1lyIlQlQ-3jdTUYgyDcXr3eyI-XqJQmTJjI" target="_blank">Download VeilX on PC</a>
     </div>
 
     <p class="unc-label">98% UNC</p>
