--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
     <p class="subtitle">Best PC Keyless Executor</p>
 
     <div class="download-buttons">
-      <a class="download-btn" href="https://mega.nz/file/CUhwnTpR#Y5nGlnj_Njpe_DmpOdL45vQ2oyFNtO8JckAvpWrcWxE" target="_blank">Download Older Roblox (Required)</a>
-      <a class="download-btn" href="https://mega.nz/file/KVZSmQhZ#9xowzZsP1lyIlQlQ-3jdTUYgyDcXr3eyI-XqJQmTJjI" target="_blank">Download VeilX on PC</a>
+      <a class="download-btn" href="https://mega.nz/file/KQpVzBhD#1IQ8l0zPDmwweXKliM2_162b5GDXZyGo4nYYk4eL2TQ" target="_blank">Download VeilX on PC</a>
+      <a class="download-btn" href="https://mega.nz/file/KQpVzBhD#1IQ8l0zPDmwweXKliM2_162b5GDXZyGo4nYYk4eL2TQ" target="_blank">Download VeilX on PC</a>
     </div>
 
     <p class="unc-label">99% UNC</p>
