--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       <a href="https://www.youtube.com/@IncognitoScripts" target="_blank" class="social-btn youtube">YouTube Channel</a>
     </div>
 
-    <button id="toggle">Install Old Roblox first</button>
+    <button id="toggle">Install and FLEX</button>
   </div>
 
   <div class="credits">
